--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,25 @@
   
   
   <dependencies>
+	  <!-- Depedência do JavaFX-->
 	  <dependency>
 		  <groupId>org.openjfx</groupId>
           <artifactId>javafx-controls</artifactId>
           <version>19</version>
+	  </dependency>
+	  
+	  <!-- Dependência do Hibernate-->
+	  <dependency>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-entitymanager</artifactId>
+		  <version>5.4.27.Final</version>
+	  </dependency>
+	  
+	  <!-- Dependência do BD (no caso: MySql)-->
+	  <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+    	  <version>8.0.30</version>
 	  </dependency>
   </dependencies>
   
