--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
   
   
   <dependencies>
+
+    <dependency>
+      <groupId>org.jfxcore</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>18-ea+1</version>
+    </dependency>
+
 	  <!-- Depedência do JavaFX-->
 	  <dependency>
 		  <groupId>org.openjfx</groupId>
