--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>api_pixel</name>
   
-  
 	<dependencies>
 		<!-- Depedência do JavaFX-->
 		<dependency>
@@ -28,6 +27,11 @@
 			<groupId>c3p0</groupId>
 			<artifactId>c3p0</artifactId>
 			<version>0.9.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>datetimepicker</artifactId>
+			<version>2.5.1</version>
 		</dependency>
 	</dependencies>
   
