--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -5,42 +5,39 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>api_pixel</name>
   
-  
-  <dependencies>
+	<dependencies>
+		<!-- Depedência do JavaFX-->
+	  	<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>19</version>
+		</dependency>
+		 <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>19</version>
+        </dependency>
 
-    <dependency>
-      <groupId>org.jfxcore</groupId>
-      <artifactId>javafx-fxml</artifactId>
-      <version>18-ea+1</version>
-    </dependency>
+		<!-- Dependência do BD (no caso: MySql)-->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.30</version>
+		</dependency>
 
-	  <!-- Depedência do JavaFX-->
-	  <dependency>
-		  <groupId>org.openjfx</groupId>
-          <artifactId>javafx-controls</artifactId>
-          <version>19</version>
-	  </dependency>
-	  
-	  <!-- Dependência do Hibernate-->
-	  <dependency>
-		  <groupId>org.hibernate</groupId>
-		  <artifactId>hibernate-entitymanager</artifactId>
-		  <version>5.4.27.Final</version>
-	  </dependency>
-	  
-	  <!-- Dependência do BD (no caso: MySql)-->
-	  <dependency>
-          <groupId>mysql</groupId>
-          <artifactId>mysql-connector-java</artifactId>
-    	  <version>8.0.30</version>
-	  </dependency>
-
+		<!-- Outros -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>datetimepicker</artifactId>
+			<version>2.5.1</version>
+		</dependency>
 		<dependency>
 			<groupId>c3p0</groupId>
 			<artifactId>c3p0</artifactId>
 			<version>0.9.1.2</version>
 		</dependency>
-  </dependencies>
+
+	</dependencies>
   
   <build>
 	  <plugins>
@@ -58,9 +55,9 @@
         	<artifactId>javafx-maven-plugin</artifactId>
         	<version>0.0.8</version>
         	<configuration>
-            	<mainClass>api_pixel.HelloFX</mainClass>
+            	<mainClass>api_pixel.Main</mainClass>
         	</configuration>
-    </plugin>
+    	</plugin>
 	  </plugins>
   </build>
   
