--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,19 @@
 			<version>0.9.1.2</version>
 		</dependency>
 
+		<!-- dependency used for XLSX file format -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.17</version>
+		</dependency>
+		<!-- dependency used for XLS older file format
+     (added for information) -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.17</version>
+		</dependency>
 	</dependencies>
   
   <build>
