--- a/pom.xml
+++ b/pom.xml
@@ -37,18 +37,10 @@
 			<version>0.9.1.2</version>
 		</dependency>
 
-		<!-- dependency used for XLSX file format -->
 		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-ooxml</artifactId>
-			<version>3.17</version>
-		</dependency>
-		<!-- dependency used for XLS older file format
-     (added for information) -->
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi</artifactId>
-			<version>3.17</version>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.12.5</version>
 		</dependency>
 	</dependencies>
   
